@@ -1,3 +1,11 @@
+2010-07-20  Colin Watson  <cjwatson@ubuntu.com>
+
+	Disable EFI cursor when the EFI console becomes inactive.
+
+	* term/efi/console.c (grub_efi_console_init): New function.
+	(grub_efi_console_fini): New function.
+	(grub_console_term_output): Register init and fini methods.
+
 2010-07-20  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* tests/util/grub-shell-tester.in: Remove bashism and declare as
